# Function_words

./: README.md  README_functionwordsets (1).md  french_XX_XXI.py  pyproject.toml  readme.md  todelete.md
.github/workflows/: python-publish.yml
functionwords/: cli.py
functionwords/datasets/: en_21c.json  fr_21c.json  french_21c.json  gr_5cbc.json  la_1c.json  oc_13c.json
functionwordsets/: loader.py
tests/: test_loader.py
