[build-system]
requires = ["setuptools>=65", "wheel", "build"]   # build deps
build-backend = "setuptools.build_meta"

[project]
name = "functionwords"           # **exact** PyPI name (no spaces)
version = "1.0.0"                # bump using SemVer
description = "Multilingual function-word datasets with a simple loader"
readme = "README.md"
authors = [
  {name = "Florian Cafiero", email = "florian.cafiero@sciencespo.fr"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: French",
  "Natural Language :: English",
  "Natural Language :: Italian",
  "Natural Language :: Spanish",
  "Natural Language :: Dutch",
  "Natural Language :: Latin",
]

[project.urls]
Homepage = "https://github.com/yourname/functionwords"
Issues   = "https://github.com/yourname/functionwords/issues"

[project.scripts]              # exposes the CLI
fw-list   = "functionwords._cli:list_sets"
fw-export = "functionwords._cli:export_set"

[tool.setuptools.package-data] # include JSON datasets
"functionwords.datasets" = ["*.json"]
